--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       type="image/x-icon"
     />
 
-    <link rel="stylesheet" href="/style.css" />
-    <script src="/index.js" defer=""></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer=""></script>
 
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
