The Forkify App

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
       rel="stylesheet"
     />
-    <link
-      rel="shortcut icon"
-      href="/favicon.8b2f57bf.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="favicon.8b2f57bf.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer=""></script>
@@ -23,7 +19,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="/logo.726d37a8.png" alt="Logo" class="header__logo" />
+        <img src="logo.726d37a8.png" alt="Logo" class="header__logo" />
         <form class="search">
           <input
             type="text"
