The Forkify App

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
           <a
             class="twitter-link"
             target="_blank"
-            href="https://twitter.com/jonasschmedtman"
-            >Jonas Schmedtmann</a
+            href="https://twitter.com/mrfiratatalay"
+            >Firat Atalay</a
           >. Use for learning or your portfolio. Don't use to teach. Don't claim
           as your own.
         </p>
@@ -137,7 +137,7 @@
         <div class="message">
           <div>
             <svg>
-              <use href="/icons.21bad73c.svg#icon-smile"></use>
+              <use href="icons.21bad73c.svg#icon-smile"></use>
             </svg>
           </div>
           <p>Start by searching for a recipe or an ingredient. Have fun!</p>
