The Forkify App

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           />
           <button class="btn search__btn">
             <svg class="search__icon">
-              <use href="/icons.21bad73c.svg#icon-search"></use>
+              <use href="icons.21bad73c.svg#icon-search"></use>
             </svg>
             <span>Search</span>
           </button>
@@ -39,7 +39,7 @@
             <li class="nav__item">
               <button class="nav__btn nav__btn--add-recipe">
                 <svg class="nav__icon">
-                  <use href="/icons.21bad73c.svg#icon-edit"></use>
+                  <use href="icons.21bad73c.svg#icon-edit"></use>
                 </svg>
                 <span>Add recipe</span>
               </button>
@@ -47,7 +47,7 @@
             <li class="nav__item">
               <button class="nav__btn nav__btn--bookmarks">
                 <svg class="nav__icon">
-                  <use href="/icons.21bad73c.svg#icon-bookmark"></use>
+                  <use href="icons.21bad73c.svg#icon-bookmark"></use>
                 </svg>
                 <span>Bookmarks</span>
               </button>
@@ -56,7 +56,7 @@
                   <div class="message">
                     <div>
                       <svg>
-                        <use href="/icons.21bad73c.svg#icon-smile"></use>
+                        <use href="icons.21bad73c.svg#icon-smile"></use>
                       </svg>
                     </div>
                     <p>
@@ -322,7 +322,7 @@
 
         <button class="btn upload__btn">
           <svg>
-            <use href="/icons.21bad73c.svg#icon-upload-cloud"></use>
+            <use href="icons.21bad73c.svg#icon-upload-cloud"></use>
           </svg>
           <span>Upload</span>
         </button>
